Remove redundant text from official.html

--- a/official.html
+++ b/official.html
@@ -374,7 +374,7 @@
         <img src="https://raw.githubusercontent.com/wuadam888/812.class/df6c9c956c5313ba030a477280f522cb0ace7ffd/%E7%9B%B4%E7%AC%9B%E5%85%A8%E6%99%AF.jpg" />
       </div>
       <div class="text">
-        912的最高榮譽!!!直笛比賽冠軍！同時獲得三個獎項！
+        直笛比賽冠軍！同時獲得三個獎項！
       </div>
     </section>
   </div>
